added tests for service layer for the methods